--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
 # Byte-compiled / optimized / DLL files
+# list all packages here that you want to ignore
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
